--- a/전복 나이 예측 경진대회/4_데이터 전처리 및 모델학습.ipynb
+++ b/전복 나이 예측 경진대회/4_데이터 전처리 및 모델학습.ipynb
@@ -15,8 +15,7 @@
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
-    "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.ensemble import GradientBoostingClassifier"
+    "from sklearn.ensemble import RandomForestRegressor"
    ]
   },
   {
@@ -34,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d632cdc1",
+   "id": "15cf8731",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2a545284",
+   "id": "31f9134e",
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "96709229",
+   "id": "39877e36",
    "metadata": {},
    "outputs": [
     {
@@ -1025,33 +1024,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "c12fefbc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# model = GradientBoostingClassifier()\n",
-    "# model.fit(train_label_x,train_label_y)\n",
-    "# pred = model.predict(test_df_label)\n",
-    "# submission['Target'] = pred\n",
-    "# submission.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "60ceabbc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# submission['Target'] = pred\n",
-    "# submission.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "dd791189",
+   "id": "8f5a6cf1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1059,7 +1033,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00a1fb95",
+   "id": "66526a65",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1067,7 +1041,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "342fc046",
+   "id": "2b9c3327",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1075,7 +1049,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "962ed27e",
+   "id": "97536a8d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1083,7 +1057,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba34ae51",
+   "id": "02e3dd26",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1091,7 +1065,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5399a7e",
+   "id": "5eb3c232",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1099,7 +1073,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bd4b5c8",
+   "id": "4265aebb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1107,7 +1081,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99a6efa3",
+   "id": "8806557f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1115,7 +1089,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94dc779b",
+   "id": "d2d12d7b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1123,7 +1097,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a77a8225",
+   "id": "6f0f602a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1131,15 +1105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7bc03db",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "693c66ff",
+   "id": "ba305c11",
    "metadata": {},
    "outputs": [],
    "source": []
