--- a/전복 나이 예측 경진대회/전복나이예측_최종_유지훈.ipynb
+++ b/전복 나이 예측 경진대회/전복나이예측_최종_유지훈.ipynb
@@ -20,7 +20,6 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
@@ -1010,7 +1009,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 9.14, 12.62,  5.14, ...,  9.65, 11.04, 11.02])"
+       "array([ 8.94, 13.21,  5.21, ...,  9.49, 10.67, 11.33])"
       ]
      },
      "execution_count": 17,
@@ -1041,7 +1040,7 @@
     }
    ],
    "source": [
-    "submission['Target'] = pred_label # 제출 파일 저장\n",
+    "submission['Target'] = pred_label\n",
     "submission.to_csv('submit_label.csv', index=False)\n",
     "print('Label인코딩 후 NMAE:0.1621244457')"
    ]
@@ -1341,7 +1340,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 8.3 , 12.88,  5.33, ...,  9.54,  9.86, 10.71])"
+       "array([ 8.46, 13.09,  5.37, ...,  9.63,  9.16, 10.79])"
       ]
      },
      "execution_count": 21,
@@ -1408,14 +1407,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.1669898580121704\n",
-      "pred값 반올림: 0.16551724137931037\n"
+      "0.16895334685598376\n",
+      "pred값 반올림: 0.1667342799188641\n"
      ]
     }
    ],
    "source": [
     "# Label Data\n",
-    "new_x_train, new_x_test, new_y_train, new_y_test = train_test_split(train_label_x, train_label_y, test_size=0.2, random_state=123)\n",
+    "new_x_train, new_x_test, new_y_train, new_y_test = train_test_split(train_label_x, \n",
+    "                                                                    train_label_y, \n",
+    "                                                                    test_size=0.2, \n",
+    "                                                                    random_state=123)\n",
     "\n",
     "new_model_label = RandomForestRegressor()\n",
     "new_model_label.fit(new_x_train,new_y_train)\n",
@@ -1436,14 +1438,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.16257200811359038\n",
-      "pred값 반올림: 0.15821501014198783\n"
+      "0.16533874239350926\n",
+      "pred값 반올림: 0.1614604462474645\n"
      ]
     }
    ],
    "source": [
     "# Onehot Data\n",
-    "new_x_train, new_x_test, new_y_train, new_y_test = train_test_split(train_onehot_x, train_onehot_y, test_size=0.2, random_state=123)\n",
+    "new_x_train, new_x_test, new_y_train, new_y_test = train_test_split(train_onehot_x, \n",
+    "                                                                    train_onehot_y, \n",
+    "                                                                    test_size=0.2, \n",
+    "                                                                    random_state=123)\n",
     "\n",
     "new_model_onehot = RandomForestRegressor()\n",
     "new_model_onehot.fit(new_x_train,new_y_train)\n",
@@ -1472,19 +1477,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "2e1868ca",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>원핫인코딩</th>\n",
+       "      <th>라벨인코딩</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>데이콘 제출 NMAE</th>\n",
+       "      <td>0.155238</td>\n",
+       "      <td>0.162124</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Train데이터로 예측 및 NMAE</th>\n",
+       "      <td>0.165339</td>\n",
+       "      <td>0.168953</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>위 예측값 반올림 NAME</th>\n",
+       "      <td>0.161460</td>\n",
+       "      <td>0.166734</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        원핫인코딩     라벨인코딩\n",
+       "데이콘 제출 NMAE          0.155238  0.162124\n",
+       "Train데이터로 예측 및 NMAE  0.165339  0.168953\n",
+       "위 예측값 반올림 NAME       0.161460  0.166734"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = {'원핫인코딩' : [0.1552376663,0.16533874239350926,0.1614604462474645],\n",
+    "        '라벨인코딩': [0.1621244457,0.16895334685598376,0.1667342799188641]}\n",
+    "df = pd.DataFrame(data=data, index=['데이콘 제출 NMAE','Train데이터로 예측 및 NMAE','위 예측값 반올림 NAME'])\n",
+    "df"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "6dec064c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Field elements must be 2- or 3-tuples, got '3'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_4452/2812672289.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mdf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'row1'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'row2'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'col1'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'col2'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: Field elements must be 2- or 3-tuples, got '3'"
+     ]
+    }
+   ],
+   "source": [
+    "data = np.array([1,2],[3,4])\n",
+    "df = pd.DataFrame(data=data, index=['row1','row2'], columns=['col1', 'col2'])\n",
+    "df"
+   ]
   },
   {
    "cell_type": "code",
